# ERC25_navigation

./: .gitignore  PID_code.py  README.md  README_VM.md  run_compression.sh
Aruco_tag/ros2_aruco/: setup.py
Aruco_tag/ros2_aruco/ros2_aruco/: aruco_generate_marker.py  aruco_tag_detector.py
Global_planner/: package.xml
Visual_Odometry/: package.xml  setup.cfg  setup.py
Visual_Odometry/Visual_Odometry/: setup.py  vo.py  vo_oak.py
Visual_Odometry/Visual_Odometry/Visual_Odometry/: vo.py
Visual_Odometry/install/: local_setup.sh  setup.sh
Visual_Odometry/install/Visual_Odometry/share/Visual_Odometry/: package.bash  package.dsv  package.sh  package.zsh
Visual_Odometry/log/: latest_build
arduino/: left_encoder_fast.ino  right_encoder_fast.ino  twist_motor_fast.ino
aruco_tag_detection/: package.xml  setup.cfg  setup.py
aruco_tag_detection/aruco_tag_detection/: aruco_tag_detector.py
aruco_tag_detection_cpp/: CMakeLists.txt  README.md  package.xml
aruco_tag_detection_cpp/config/: camera_calibration.yaml
aruco_tag_detection_cpp/launch/: aruco_with_map.launch.py  multi_camera_aruco_detector.launch.py
aruco_tag_detection_cpp/src/: aruco_tag_detector.cpp
bbox_display/: CMakeLists.txt  package.xml  setup.cfg  setup.py
bbox_display/bbox_display/: bbox_to_marker.py
frontier_search/: package.xml  setup.cfg  setup.py
frontier_search/frontier_search/: frontier_search.py  temporary.py
global_costmap/: package.xml  setup.py
global_costmap/global_costmap/: global_costmap.py
global_planner/: package.xml  setup.py
global_planner/global_planner/: global.py
gui_pkg/: package.xml  setup.py
gui_pkg/gui_pkg/: batgui.py  joy_to_motion.py  keyboard_to_twist.py  new_gui.py
image_compression_util/: package.xml  setup.cfg  setup.py
image_compression_util/config/: camera_topics.yaml
image_compression_util/launch/: compress_from_config.launch.py  decompress_from_config.launch.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gui_pkg/lib/gui_pkg/: batgui  joy_to_motion  keyboard_to_twist  new_gui
install/gui_pkg/share/gui_pkg/: package.sh  package.xml
lidar_odometry/: package.xml  setup.py
lidar_odometry/lidar_odometry/: kiss_icp.py  lidar_odometry.py  lo.py  temp.py  viewer.py
lio-slam/: CMakeLists.txt  package.xml
lio-slam/config/: config.yaml
lio-slam/launch/: lio_sam.launch.py
lio-slam/src/: lio_sam_node.cpp
local_costmap/: STEREO_COSTMAP_README.md  package.xml  setup.py
local_costmap/launch/: stereo_costmap.launch.py
local_costmap/local_costmap/: local_costmap_node.py  stereo_costmap_node.py
local_solver/: CMakeLists.txt  package.xml
local_solver/src/: local.cpp  test.cpp
localization/: package.xml  setup.py
localization/launch/: dead_reckoning_launcher.py
localization/localization/: dead_reckoning.py  dead_reckoning_enc.py  dead_reckoning_imu.py  dead_reckoning_sim.py  encoder_sim.py
log/: latest_build
microcontroller/: package.xml  setup.py
microcontroller/launch/: microcontroller_start.launch.py
microcontroller/microcontroller/: microcontroller_interface.py
motion_controller/: package.xml  setup.py
motion_controller/launch/: PID_launcher.py
motion_controller/motion_controller/: PID_controller.py
my_global_costmap/: global_costmap.yaml  package.xml  setup.cfg  setup.py
my_global_costmap/my_global_costmap/: obstacle_layer.py
ros_test/: competition.rviz  package.xml  setup.py
rovers_interfaces/: CMakeLists.txt  package.xml
rovers_interfaces/msg/: BBoxList.msg  CustomBBox.msg  Detection.msg  DetectionList.msg  Ticks.msg
rviz/ros_test/: ROStest.json  setup.py
rviz/ros_test/ros_test/: battery_marker.py  gui.py  gui_syntax.py
visual_odom/: setup.py  vo.py
visual_odom/visual_odom/: STORAGE.py  __init__.py  bsjz.py  import os.py  oak_d.py  vo.py
visual_odometry/: package.xml  setup.py
visual_odometry/visual_odometry/: visual_odometry.py  vo_oak.py
vo_cpp/: CMakeLists.txt  package.xml
vo_cpp/include/vo_cpp/: oak_visual_odometry.hpp
vo_cpp/src/: oak_visual_odometry.cpp
web_ui/: README.md  package.xml  setup.py
web_ui/launch/: web_ui.launch.py
web_ui/web_ui/: web_server.py
web_ui/web_ui/www/: debug.html  index.html  style.css  test_custom.html
web_ui/web_ui/www/config/: topics.json  topics_real.json
web_ui/web_ui/www/css/: style.css
web_ui/web_ui/www/js/: app.js
